feat: :sparkles: Add routes, start work in manual mode

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,4 @@
-@import 'styles/base/variables'
+@import 'styles/index'
   
 html, body 
   margin: 0
@@ -6,15 +6,15 @@ html, body
   height: 100%
   font-family: Roboto, sans-serif
   color: $color-text-primary
+  background-image: linear-gradient(to right bottom, #c0c7e3, #abb9e2, #94abe1, #799edf, #5792de)
+  background-size: cover
+  background-attachment: fixed
 
 body 
   display: flex
   flex-direction: column
 
-
 #root 
-  background: rgb(92,135,255)
-  background: linear-gradient(168deg, rgba(92,135,255,1) 0%, rgba(182,211,255,1) 100%)
   flex: 1
   display: flex
   flex-direction: column
