--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,2 +1,13 @@
-@import 'components/_RosConsoleLogs'
-@import 'components/_ContainerElement'
+@import 'components/ContainerElement'
+@import 'components/Header'
+@import 'components/Navbar'
+@import 'components/ConnectionRobotStatus'
+
+
+@import 'layouts/GridLayoutDashboard'
+@import 'layouts/GridLayoutManual'
+
+@import 'base/index'
+
+@import 'pages/Dashboard/index'
+@import 'pages/Manual/index'
