--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -1,6 +1,5 @@
-$color-text-primary: #070b34
-$color-text-secondary: #e9f2ff
-$color-text-strong-primary: #152aff
+$box-shadow-primary: 0 4px 3px -1px $color-shadow, 0 2px 4px -2px $color-shadow
+$border-radius-primary: 30px
 
-$color-background-items: #b6d3ff
-$color-border: #152aff
+$size-title-item: 1.8em
+$size-title-page: 3em
