--- a/src/styles/components/_ContainerElement.sass
+++ b/src/styles/components/_ContainerElement.sass
@@ -4,7 +4,6 @@
   display: flex
   flex-direction: column
   padding: 0.8em 1.2em
-  padding-bottom: 1.5em
   border-radius: $border-radius-primary
   background-color: $color-background-items
   align-items: center
@@ -31,3 +30,7 @@
   &__content
     width: max-content
     height: max-content
+
+  &__time
+    align-self: end
+    margin-top: 0.5em 
