--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -4,12 +4,14 @@
   display: flex
   align-items: center
   justify-content: center
+  flex-direction: row
   background-color: $color-background-items
   border-radius: $border-radius-primary
   box-shadow: $box-shadow-primary
   width: max-content
   height: max-content
   padding: 2.5em
+  gap: 2em
 
   h1
     color: $color-text-primary
