--- a/src/styles/layouts/_GridLayoutManual.sass
+++ b/src/styles/layouts/_GridLayoutManual.sass
@@ -1,6 +1,6 @@
 .grid-container-manual
   display: grid
-  grid-template-areas: "connection header header" "teleop consolelog camera" "parameters parameters content"
+  grid-template-areas: "connection header header" "teleop map camera" "parameters parameters content"
   grid-template-columns: auto auto auto
   grid-template-rows: auto
   align-items: start
@@ -15,7 +15,10 @@
 
   &--teleop
     grid-area: teleop
+    align-self: center
 
   &--camera
     grid-area: camera
 
+  &--map
+    grid-area: map
