--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,6 +2,8 @@
 @import 'components/Header'
 @import 'components/Navbar'
 @import 'components/ConnectionRobotStatus'
+@import 'components/CameraView'
+@import 'components/Switch'
 
 
 @import 'layouts/GridLayoutDashboard'
