feat: :construction: autonomous mode

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,13 +1,6 @@
-@import 'components/ContainerElement'
-@import 'components/Header'
-@import 'components/Navbar'
-@import 'components/ConnectionRobotStatus'
-@import 'components/CameraView'
-@import 'components/Switch'
+@import 'components/index'
 
-
-@import 'layouts/GridLayoutDashboard'
-@import 'layouts/GridLayoutManual'
+@import 'layouts/index'
 
 @import 'base/index'
 
