feat: :sparkles: Add selector goal & table view

--- a/src/styles/base/_colors.sass
+++ b/src/styles/base/_colors.sass
@@ -1,10 +1,13 @@
-$color-text-primary: #061941
+$text-primary: #061941
+$text-secondary: #ffffff
 
-$color-background: #C0C7E3B0
+$primary: #0779d7
+$secondary: #FFC88F
+$background: #C0C7E3B0
 //$color-background-items: #8cc6d9
-$color-background-items: #d4deff
-$color-background-items2: #d4ffe6
-$color-items2-opacity: #d4deffB0
+$background-items: #d4deff
+$background-items2: #d4ffe6
+$items2-opacity: #d4deffB0
 
 $color-shadow: rgba(6, 25, 65, 0.2)
 
