--- a/src/styles/components/_ConnectionRobotStatus.sass
+++ b/src/styles/components/_ConnectionRobotStatus.sass
@@ -5,7 +5,7 @@
   flex-direction: column
   align-items: center
   align-content: center
-  background-color: $color-background-items
+  background-color: $background-items
   padding: 1em 1.5em
   border-radius: $border-radius-primary
   width: 21vw
