--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -5,7 +5,7 @@
   align-items: center
   justify-content: center
   flex-direction: row
-  background-color: $color-background-items
+  background-color: $background-items
   border-radius: $border-radius-primary
   box-shadow: $box-shadow-primary
   width: max-content
@@ -14,7 +14,7 @@
   gap: 2em
 
   h1
-    color: $color-text-primary
+    color: $text-primary
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3)
     font-size: $size-title-page !important // Ajusta el tamaño de fuente según sea necesario
     font-weight: bold // Aumenta el peso para hacer el título más impactante
