--- a/src/styles/components/_Navbar.sass
+++ b/src/styles/components/_Navbar.sass
@@ -14,10 +14,10 @@
   
   &__link
     text-decoration: none
-    color: $color-text-primary
+    color: $text-primary
 
     &:visited
-      color: $color-text-primary
+      color: $text-primary
 
     &__content
       padding: 0.7em 1em  
@@ -28,6 +28,6 @@
       font-size: 1.5em
 
       &:hover
-        background-color: $color-items2-opacity
+        background-color: $items2-opacity
         border-bottom: 5px solid #5792de
         padding-bottom: calc(0.7em - 5px)
