--- a/src/styles/pages/Dashboard/components/_RosParameters.sass
+++ b/src/styles/pages/Dashboard/components/_RosParameters.sass
@@ -1,7 +1,7 @@
 @import '@styles/base/index'
 
 .rosparameters
-  background-color: $color-background-items
+  background-color: $background-items
   box-shadow: $box-shadow-primary
   border-radius: $border-radius-primary
   padding: 1em
