--- a/src/styles/pages/Manual/components/_TeleopTwist.sass
+++ b/src/styles/pages/Manual/components/_TeleopTwist.sass
@@ -1,11 +1,11 @@
-@import '../../../base/index'
+@import '@styles/base/index'
 
 .teleop-twist
   display: flex
   flex-direction: column
   align-items: center
   justify-content: center
-  background-color: $color-background-items
+  background-color: $background-items
   border-radius: $border-radius-primary
   padding: 1.2em 2em
   box-shadow: $box-shadow-primary
@@ -47,7 +47,7 @@
 .teleop-icons
   width: 2em !important
   height: auto !important
-  color: $color-text-primary
+  color: $text-primary
   transition: 0.5s
   &:active
     color: green
