--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,7 +5,7 @@ html, body
   padding: 0
   height: 100%
   font-family: Roboto, sans-serif
-  color: $color-text-primary
+  color: $text-primary
   background-image: linear-gradient(to right bottom, #c0c7e3, #abb9e2, #94abe1, #799edf, #5792de)
   background-size: cover
   background-attachment: fixed
