--- a/src/styles/components/_CameraView.sass
+++ b/src/styles/components/_CameraView.sass
@@ -5,8 +5,8 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  width: max-content
-  height: max-content
+  width: 100%
+  height: 100%
   
   &__img
     width: 440px
