--- a/src/styles/components/_ContainerElement.sass
+++ b/src/styles/components/_ContainerElement.sass
@@ -3,34 +3,39 @@
 .container-element
   display: flex
   flex-direction: column
-  padding: 0.8em 1.2em
+  flex-wrap: wrap
+  padding: 0.8em 0.8em
   border-radius: $border-radius-primary
-  background-color: $color-background-items
+  background-color: $background-items
   align-items: center
   justify-content: center
-  width: max-content
-  height: max-content
+  width: 100%
   box-shadow: $box-shadow-primary
 
   &__header
     display: flex
     flex-direction: row
-    height: max-content
-    width: max-content
-    align-items: center
-    justify-content: center
 
     &__title
       text-align: center
-      font-size: $size-title-item
+      font-size: $size-title-item !important
+
 
     &__subtitle
       text-align: center
   
   &__content
-    width: max-content
-    height: max-content
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    height: 100%
+    width: 100%
+    box-sizing: border-box 
 
   &__time
-    align-self: end
+    display: flex
+    width: 100%
+    justify-content: end
     margin-top: 0.5em 
+    
