--- a/src/styles/components/_Button.sass
+++ b/src/styles/components/_Button.sass
@@ -7,6 +7,7 @@
     text-transform: none !important
     border: 2px solid $primary !important
     font-size: 1em !important
+    border-radius: 12px !important
     
     &:hover
       background-color: rgba($primary, 0.5) !important
@@ -30,6 +31,7 @@
     border: 2px solid $primary !important
     text-transform: none !important
     font-size: 1em !important
+    border-radius: 12px !important
     
     &:hover
       background-color: $secondary !important
