--- a/src/styles/pages/Autonomous/components/_ManagePathNav.sass
+++ b/src/styles/pages/Autonomous/components/_ManagePathNav.sass
@@ -1,8 +1,28 @@
 .manage-path
+  display: flex
+  flex-direction: column
+  gap: 0.8em
+
+  &__buttons-option
+    display: flex
+    flex-direction: row
+    gap: 1em
+    margin-top: 0.3em
+
   &__table
     background-color: #b7c7fbb0 
-    border-color: #0f3bc9b0 
     border-radius: 16px
+
+    &::-webkit-scrollbar
+      width: 12px
+    &::-webkit-scrollbar-track
+      background-color: #f1f1f1
+      border-radius: 10px
+    &::-webkit-scrollbar-thumb
+      background-color: #7090fa
+      border-radius: 10px
+      &:hover
+        background-color: #506fb8
 
     &__head
       font-size: 1.8em
@@ -14,6 +34,6 @@
 
     &__body
       font-size: 1.5em
-      
+
       &--cell
         padding: 0.7em 1.5em !important
