feat: :lipstick: Update style

--- a/src/styles/components/_ConnectionRobotStatus.sass
+++ b/src/styles/components/_ConnectionRobotStatus.sass
@@ -8,8 +8,6 @@
   background-color: $background-items
   padding: 1em 1.5em
   border-radius: $border-radius-primary
-  width: 21vw
-  height: max-content
   box-sizing: border-box
   box-shadow: $box-shadow-primary
 
@@ -24,7 +22,7 @@
     justify-content: start
     align-items: center
     box-sizing: border-box
-    width: 18vw
+    width: 100%
     height: 100%
     gap: 1em
     padding: 0 1em 
@@ -39,7 +37,7 @@
       background-size: 200% auto
       color: black !important
       text-transform: none !important
-      width: 5vw
+      width: 35%
       margin-left: auto !important
       font-size: 0.9em !important
       transition: 0.5s !important
