--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -8,9 +8,9 @@
   background-color: $background-items
   border-radius: $border-radius-primary
   box-shadow: $box-shadow-primary
-  width: max-content
+  width: auto
   height: max-content
-  padding: 2.5em
+  padding: 2em
   gap: 2em
 
   h1
