--- a/src/styles/pages/Dashboard/components/_RosConsoleLogs.sass
+++ b/src/styles/pages/Dashboard/components/_RosConsoleLogs.sass
@@ -2,7 +2,7 @@
   overflow: auto
   background-color: rgb(0, 0, 0)
   width: 30vw
-  height: 34vh
+  height: 40vh
 
   &__text
     color: rgb(255, 255, 255)
@@ -13,3 +13,16 @@
       font-size: smaller
       margin: 2px
       color: #FFFF00
+
+@media (max-width: 768px)
+  .console-log
+    width: 80vw
+
+@media (min-width: 769px) and (max-width: 1279px)
+  .console-log
+    width: 40vw
+
+@media (min-width: 1280px)
+  .console-log
+    width: 25vw
+
