--- a/src/styles/base/_variables.sass
+++ b/src/styles/base/_variables.sass
@@ -1,5 +1,5 @@
 $box-shadow-primary: 0 4px 3px -1px $color-shadow, 0 2px 4px -2px $color-shadow
 $border-radius-primary: 30px
 
-$size-title-item: 1.7em
-$size-title-page: 3em
+$size-title-item: 1.6rem
+$size-title-page: 3rem
