--- a/src/styles/components/_Button.sass
+++ b/src/styles/components/_Button.sass
@@ -37,3 +37,8 @@
       background-color: $secondary !important
       border: 1px solid $primary
       box-shadow: 1px 1px 5px 1px $primary
+
+    &:disabled
+      background-color: rgba($secondary,0.4) !important
+      color: $text-primary !important
+      opacity: 0.5
