--- a/src/styles/components/_CameraView.sass
+++ b/src/styles/components/_CameraView.sass
@@ -5,8 +5,6 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  width: 100%
-  height: 100%
   
   &__img
     width: 440px
@@ -17,8 +15,25 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    width: 440px
-    height: 330px
+    
     background-color: black
     color: white
     font-size: 1.8em
+
+@media (max-width: 768px)
+  .camera-view
+    &__no-img
+      width: 80vw
+      height: 40vh
+
+@media (min-width: 769px) and (max-width: 1279px)
+  .camera-view
+    &__no-img
+      width: 40vw
+      height: 40vh
+
+@media (min-width: 1280px)
+  .camera-view
+    &__no-img
+      width: 30vw
+      height: 40vh
