--- a/src/styles/components/_ContainerElement.sass
+++ b/src/styles/components/_ContainerElement.sass
@@ -3,18 +3,18 @@
 .container-element
   display: flex
   flex-direction: column
-  flex-wrap: wrap
   padding: 0.8em 0.8em
   border-radius: $border-radius-primary
   background-color: $background-items
   align-items: center
   justify-content: center
-  width: 100%
+  width: max-content
   box-shadow: $box-shadow-primary
 
   &__header
     display: flex
     flex-direction: row
+    width: 100%
 
     &__title
       text-align: center
@@ -29,9 +29,7 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    height: 100%
-    width: 100%
-    box-sizing: border-box 
+
 
   &__time
     display: flex
