--- a/src/styles/base/_colors.sass
+++ b/src/styles/base/_colors.sass
@@ -5,7 +5,7 @@ $primary: #0779d7
 $secondary: #FFC88F
 $background: #C0C7E3B0
 //$color-background-items: #8cc6d9
-$background-items: #d4deff
+$background-items: rgba(#d4deff,0.5)
 $background-items2: #d4ffe6
 $items2-opacity: #d4deffB0
 
