--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -5,18 +5,20 @@
   align-items: center
   justify-content: center
   flex-direction: row
-  background-color: $background-items
-  border-radius: $border-radius-primary
-  box-shadow: $box-shadow-primary
-  width: auto
-  height: max-content
-  padding: 2em
-  gap: 2em
+  margin: 1rem 0
+  flex-wrap: wrap
+  gap: 1rem
 
-  h1
-    color: $text-primary
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3)
-    font-size: $size-title-page !important // Ajusta el tamaño de fuente según sea necesario
-    font-weight: bold // Aumenta el peso para hacer el título más impactante
-    letter-spacing: 0.02em // Espaciamiento entre letras para mayor claridad
-    text-align: center
+  &--title
+    display: flex
+    align-items: center
+    justify-content: center
+    padding: 0.5rem
+    width: max-content
+    h1
+      color: $text-primary
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3)
+      font-size: $size-title-page !important // Ajusta el tamaño de fuente según sea necesario
+      font-weight: bold // Aumenta el peso para hacer el título más impactante
+      letter-spacing: 0.02em // Espaciamiento entre letras para mayor claridad
+      text-align: center
