--- a/src/styles/components/_Navbar.sass
+++ b/src/styles/components/_Navbar.sass
@@ -7,9 +7,6 @@
   justify-content: center
   background-color: #c0c7e3
   box-shadow: $box-shadow-primary
-  position: sticky
-  width: 100%
-  z-index: 5
   gap: 3em
   
   &__link
@@ -20,14 +17,14 @@
       color: $text-primary
 
     &__content
-      padding: 0.7em 1em  
+      padding: 1rem 1.2rem  
       display: flex
       align-items: center
       justify-content: center
       cursor: pointer
-      font-size: 1.5em
+      font-size: 1.5rem
 
       &:hover
         background-color: $items2-opacity
         border-bottom: 5px solid #5792de
-        padding-bottom: calc(0.7em - 5px)
+        padding-bottom: calc(1rem - 5px)
