--- a/src/styles/pages/Autonomous/_Autonomous.sass
+++ b/src/styles/pages/Autonomous/_Autonomous.sass
@@ -2,4 +2,6 @@
   display: flex
   flex-direction: column
   gap: 1rem
-  width: 100%
+  width: 100vw
+  justify-content: center
+  align-items: center
