--- a/src/styles/pages/Manual/_Manual.sass
+++ b/src/styles/pages/Manual/_Manual.sass
@@ -1,5 +1,7 @@
 .manual
   display: flex
   flex-direction: column
+  align-items: center
+  justify-content: center
   gap: 1rem
-  width: 100%
+  width: 100vw
