--- a/src/styles/components/_ContainerElement.sass
+++ b/src/styles/components/_ContainerElement.sass
@@ -6,16 +6,16 @@
   padding: 0.8em 0.8em
   border-radius: $border-radius-primary
   background-color: $background-items
-  align-items: center
-  justify-content: center
   width: max-content
   box-shadow: $box-shadow-primary
 
   &__header
     display: flex
-    flex-direction: row
-    width: 100%
-
+    flex-direction: row 
+    padding: 0.4rem 1rem
+    gap: 2rem 
+    justify-content: space-between 
+    align-items: center 
     &__title
       text-align: center
       font-size: $size-title-item !important
@@ -27,13 +27,11 @@
   &__content
     display: flex
     flex-direction: column
-    align-items: center
-    justify-content: center
-
+    padding: 0.4rem 0.3rem
 
   &__time
     display: flex
     width: 100%
     justify-content: end
-    margin-top: 0.5em 
+    align-items: center
     
