--- a/src/styles/components/index.sass
+++ b/src/styles/components/index.sass
@@ -7,3 +7,7 @@
 @import 'Button'
 @import 'Status'
 @import 'Control'
+@import 'ManagePathNav'
+@import 'MapAutonomous'
+@import 'RobotStatus'
+@import 'RosConsoleLogs'
