--- a/src/styles/components/_CameraView.sass
+++ b/src/styles/components/_CameraView.sass
@@ -6,9 +6,9 @@
   align-items: center
   justify-content: center
   
-  &__img
-    width: 440px
-    height: 330px
+  &__img, &__no-img
+    width: 500px
+    height: 320px
 
   &__no-img
     display: flex
@@ -20,20 +20,20 @@
     color: white
     font-size: 1.8em
 
-@media (max-width: 768px)
-  .camera-view
-    &__no-img
-      width: 80vw
-      height: 40vh
+// @media (max-width: 768px)
+//   .camera-view
+//     &__no-img
+//       width: 80vw
+//       height: 40vh
 
-@media (min-width: 769px) and (max-width: 1279px)
-  .camera-view
-    &__no-img
-      width: 40vw
-      height: 40vh
+// @media (min-width: 769px) and (max-width: 1279px)
+//   .camera-view
+//     &__no-img
+//       width: 40vw
+//       height: 40vh
 
-@media (min-width: 1280px)
-  .camera-view
-    &__no-img
-      width: 30vw
-      height: 40vh
+// @media (min-width: 1280px)
+//   .camera-view
+//     &__no-img
+//       width: 30vw
+//       height: 40vh
