--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -5,8 +5,9 @@
   align-items: center
   justify-content: center
   flex-direction: row
-  margin: 1rem 0
+  margin-bottom: 2.4rem
   flex-wrap: wrap
+  width: 800px
   gap: 1rem
 
   &--title
