--- a/src/styles/components/_ManagePathNav.sass
+++ b/src/styles/components/_ManagePathNav.sass
@@ -4,7 +4,7 @@
   display: flex
   flex-direction: column
   gap: 0.8em
-  width: max-content
+  width: 100%
 
   &__text-not-found
     color: $text-primary
