feat: :sparkles: Update notifications & publishers

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -22,10 +22,13 @@ html, body
   justify-content: center
   gap: 10px
   padding: 20px
+  width: max-content
+  min-width: 100vw
   
   &__row
     display: flex
     align-items: center
+    width: 100%
     gap: 3rem
 
   &__side
