--- a/src/styles/base/_colors.sass
+++ b/src/styles/base/_colors.sass
@@ -1,11 +1,11 @@
 $text-primary: #061941
-$text-secondary: #ffffff
+$text-secondary: #dae4f8
 
 $primary: #0779d7
 $secondary: #FFC88F
-$background: #C0C7E3B0
+$background: #c0c7e3e6
 //$color-background-items: #8cc6d9
-$background-items: rgba(#d4deff,0.5)
+$background-items: rgba(#d4deff,0.8)
 $background-items2: #d4ffe6
 $items2-opacity: #d4deffB0
 
