--- a/src/styles/components/_Control.sass
+++ b/src/styles/components/_Control.sass
@@ -20,7 +20,7 @@
   &__status
     display: flex
     gap: 10px
-    font-size: 1.1rem
+    font-size: 1.1rem 
 
   &__buttons-grid
     display: grid
@@ -67,3 +67,7 @@
     justify-content: center
     flex-wrap: wrap
     gap: 10px 
+
+  &__group-icon
+    display: flex
+    align-items: center
