--- a/src/styles/components/_Header.sass
+++ b/src/styles/components/_Header.sass
@@ -17,9 +17,10 @@
     padding: 0.5rem
     width: max-content
     h1
-      color: $text-primary
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3)
+      color: $text-secondary
+      text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.3)
       font-size: $size-title-page !important // Ajusta el tamaño de fuente según sea necesario
       font-weight: bold // Aumenta el peso para hacer el título más impactante
       letter-spacing: 0.02em // Espaciamiento entre letras para mayor claridad
       text-align: center
+      text-wrap: wrap
