--- a/src/styles/components/_Status.sass
+++ b/src/styles/components/_Status.sass
@@ -36,9 +36,12 @@
       background-color: $background 
 
     &--content
+      display: flex
+      flex-direction: column
       background-color: $background 
+      gap: 0.5rem
       padding: 1rem
-      width: 400px
+      width: 600px
       color: $text-primary
 
     &--actions
