--- a/src/styles/components/_Control.sass
+++ b/src/styles/components/_Control.sass
@@ -17,6 +17,19 @@
 
 
 .control-manual
+  &__switch-options
+    display: flex
+    flex-direction: row
+    gap: 2rem
+
+    &__content
+      display: flex
+      flex-direction: column
+      align-items: center
+      justify-content: center
+      color: $text-primary
+      font-size: 1.05rem
+
   &__status
     display: flex
     gap: 10px
@@ -24,7 +37,7 @@
 
   &__buttons-grid
     display: grid
-    grid-template-areas: "up up up" "left reset right" "down down down"
+    grid-template-areas: "left up right" "down down down"
     grid-template-columns: 1fr auto 1fr
     grid-template-rows: auto
     align-items: center
