--- a/src/styles/components/_Control.sass
+++ b/src/styles/components/_Control.sass
@@ -17,6 +17,64 @@
 
 
 .control-manual
+  display: flex
+  align-items: center
+  justify-content: center 
+  width: 100%
+  height: 100%
+  & > * 
+    color: $text-primary
+    font-size: 1.2rem !important
+
+  &__title
+    font-size: 1.7rem !important
+
+
+  &__accelerator
+    display: flex
+    flex-direction: column
+    justify-content: center
+    width: 100%
+
+    &__info
+      display: flex
+      justify-content: center
+      align-items: center
+      gap: 20px    
+      
+    &__slider
+      display: flex
+      flex-direction: row
+      justify-content: center
+      align-items: center
+      width: 100%
+      gap: 20px
+      margin: 0.5rem 0
+      padding: 0 0.2rem
+
+  &__direction
+    display: flex
+    flex-direction: column
+    justify-content: center
+    width: 100%
+
+    &__info
+      display: flex
+      justify-content: center
+      align-items: center
+      gap: 20px     
+  
+    &__slider
+      display: flex
+      flex-direction: row
+      justify-content: center
+      align-items: center
+      width: 100%
+      gap: 20px
+      margin: 0.5rem 0
+      padding: 0 1rem
+
+
   &__switch-options
     display: flex
     flex-direction: row
@@ -35,37 +93,6 @@
     gap: 10px
     font-size: 1.1rem 
 
-  &__buttons-grid
-    display: grid
-    grid-template-areas: "left up right" "down down down"
-    grid-template-columns: 1fr auto 1fr
-    grid-template-rows: auto
-    align-items: center
-    justify-items: center
-    gap: 10px
-
-    &--up
-      grid-area: up
-    
-    &--down
-      grid-area: down
-
-    &--left
-      grid-area: left
-    
-    &--right
-      grid-area: right
-    
-    &--reset
-      grid-area: reset
-  
-  &__icons
-    width: 2em !important
-    height: auto !important
-    color: $text-primary
-    transition: 0.5s
-    &:active
-      color: green
 
 .control-autonomous
   &__state
